# eda-floorplan-openenv

./: .gitignore  Dockerfile  Readme.md  eda_env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  visualize.py
gradef grade_task(*args, **kwargs):     """     Required OpenEnv grader entry point.     Our FastAPI server handles dynamic reward calculation during the /: grader.py
server/: app.py
